tests/compile_fail/state/multiple_top_states.stderr
error: multiple `moku::TopState`s are defined within this module
  --> tests/compile_fail/state/multiple_top_states.rs:14:5
   |
14 |     impl TopState for OtherTop {}
   |     ^^^^
